feat: Remove RolesService, MultiTenantResolver, and RateLimitFilter, and update authorization configuration to use OPA.